# TestPlayer

./: .gitignore  README.md  log.txt  ndk_err.txt  settings.gradle
app/: build.gradle  dming.jks
app/src/androidTest/java/com/dming/testplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AV.h  AVClock.h  Audio.cpp  Audio.h  Audio2.cpp  Audio2.h  BaseAV.cpp  BaseAV.h  CMakeLists.txt  EGLEngine.cpp  EGLEngine.h  EglHelper.cpp  FFmpeg.cpp  FFmpeg.h  FPacket.c  FPacket.h  FPlayer.cpp  FPlayer.h  FPlayer2.cpp  FPlayer2.h  FPlayerJni.cpp  GLRender.cpp  GLRender.h  GLShape.cpp  GLShape.h  GLThread.cpp  GLThread.h  GLUtils.cpp  OpenGL.cpp  OpenGL.h  OpenSL.cpp  OpenSL.h  Opensl.cpp  Opensl.h  PthreadSleep.cpp  PthreadSleep.h  SearchFile.cpp  SearchFile.h  Video.cpp  Video.h  (+6 more)
app/src/main/cpp/audio/: Audio.cpp  Audio.h
app/src/main/cpp/audio/render/: AudioPlay.cpp  AudioPlay.h  AudioSpeed.cpp  AudioSpeed.h  OpenSL.h  PlayAudioBuffer.cpp  PlayAudioBuffer.h  audio_data_callback.h  record_audio.cpp  record_audio.h
app/src/main/cpp/av/: AVClock.cpp  AVClock.h  BaseAV.cpp  BaseAV.h  FPacket.c  FPacket.h
app/src/main/cpp/ffmpeg/libavutil/: channel_layout.h
app/src/main/cpp/libs/include/libavcodec/: mediacodec.h
app/src/main/cpp/libs/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/libs/include/libavutil/: avutil.h  ffversion.h  hwcontext_d3d11va.h  hwcontext_qsv.h  version.h
app/src/main/cpp/libs/include/libsoundtouch/: STTypes.h  SoundTouch.h
app/src/main/cpp/ntp/: ntp_client.c  ntp_client.h  xtime.c  xtypes.h
app/src/main/cpp/test/: Audio.cpp  Audio.h  FPlayer.cpp  FPlayer.h  Video.cpp  Video.h  native-lib.cpp
app/src/main/cpp/utils/: FLog.h  PthreadSleep.cpp  PthreadSleep.h  blocking_queue.h  log.h  time_utils.cpp  time_utils.h
app/src/main/cpp/video/: Video.cpp  Video.h
app/src/main/cpp/video/render/: GLRender.cpp  GLRender.h  GLThread.cpp  GLThread.h  GLUtils.h  OpenGL.cpp  OpenGL.h
app/src/main/java/com/dming/testplayer/: DLog.java  DUtils.java  EglHelper.java  FLog.java  FPlayer.java  FToast.java  FileAction.java  MainActivity.java  MainActivity.kt  MonitorActivity.java  OnProgressListener.java  PermissionFragment.java  TestActivity.java
app/src/main/java/com/dming/testplayer/gl/: CameraTex.java  DLog.java  EglHelper.java  FGLUtils.java  FSurfaceView.java  GLBindRunnable.java  IShader.java  LineGraph.java  NormalFilter.java  OnProgressListener.java  ShaderHelper.java  TestActivity.java  TextureUtils.java
app/src/main/res/layout/: act_test.xml  activity_main.xml  item_file_list.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-v19/: dimens.xml
app/src/test/java/com/dming/testplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
